# Claude-mobile

./: .gitignore  CLAUDE.md  Dockerfile  NOTES.md  README.md  e2b.Dockerfile  pyproject.toml
sandbox-example/: e2b.Dockerfile  run.py
scripts/: commit-main.sh  explore_sandbox.py  note.sh  run_sandbox.py  setup.sh  start-docker.sh  start.sh  status.sh
src/claude_mobile/: __init__.py
tests/: test_connectivity.py
