[project]
name = "claude-mobile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.13"
dependencies = [
    "e2b>=2.25.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
